# server/game/component/componentrenderable.go
@@ -5,12 +5,18 @@ import "webscape/server/util"
 const ComponentIdRenderable = ComponentId("renderable")
 
 type CRenderable struct {
-	renderType string
+	renderType  string
+	orientation string
 }
 
-func NewCRenderable(renderType string) *CRenderable {
+func NewCRenderable(renderType string, orientation ...string) *CRenderable {
+	renderOrientation := ""
+	if len(orientation) > 0 {
+		renderOrientation = orientation[0]
+	}
 	return &CRenderable{
-		renderType: renderType,
+		renderType:  renderType,
+		orientation: renderOrientation,
 	}
 }
 
@@ -19,9 +25,13 @@ func (c *CRenderable) GetId() ComponentId {
 }
 
 func (c *CRenderable) Serialize() util.Json {
-	return util.JObject(map[string]util.Json{
+	result := util.JObject(map[string]util.Json{
 		"type": util.JString(c.renderType),
 	})
+	if c.orientation != "" {
+		result["orientation"] = util.JString(c.orientation)
+	}
+	return result
 }
 
 func (c *CRenderable) GetType() string {
@@ -30,4 +40,12 @@ func (c *CRenderable) GetType() string {
 
 func (c *CRenderable) SetType(renderType string) {
 	c.renderType = renderType
+}
+
+func (c *CRenderable) GetOrientation() string {
+	return c.orientation
+}
+
+func (c *CRenderable) SetOrientation(orientation string) {
+	c.orientation = orientation
 }
